<resources>
    <string name="app_name">Manheim InFo Scanner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_s">SActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="lot">LOT.</string>

    <string name="lot_number">Lot Number</string>

    <string name="registration">Registration</string>

    <string name="auction_code">Auction Code</string>

    <string name="auction_code_search">Auction Code : </string>

    <string name="auction_date">Auction Date</string>
    <string name="model">Make/Model</string>
    <string name="reg_date">Regis Date</string>
    <string name="engine">Engine</string>
    <string name="gear">Gear</string>
    <string name="colour">Colour</string>
    <string name="km">KM.</string>
    <string name="reg">Reg.</string>
    <string name="reg_province">Reg.Province</string>
    <string name="owner">Owner</string>
    <string name="drive">Drive</string>
    <string name="body">Body</string>
    <string name="reg_expiry">Reg.Expiry</string>
    <string name="desc">Description</string>
    <string name="title_flag">Title Flag</string>
    <string name="type">Vehicle Type</string>

    <string name="seller">Seller</string>
    <string name="location">Location</string>
    <string name="capacity">Size/Weight</string>
    <string name="book_service">Book Service</string>

    <string name="build_year">Build Year</string>
    <string name="price">Price</string>
    <string name="date_first_reg">Date First Reg</string>
    <string name="chasis_number">ChasisNumber</string>
    <string name="engine_number">EngineNumber</string>


    <string name="make">Make</string>


    <string name="engine_manufacturer">EngineManufacturer</string>


    <string name="vehicle_that">Vehicles that : </string>

    <string-array name="yellow_flag">
        <item>May have re-registration delays</item>
        <item>Outstanding fines or taxes to be paid</item>
    </string-array>


    <string-array name="green_flag">
        <item>Have a current title book</item>
        <item>Can be re-registered immediately</item>
    </string-array>

    <string-array name="red_flag">
        <item>Cannot be re-registered</item>
        <item>May have mismatched or missing vehicle identifiers</item>
        <item>May not pass LTA inspection</item>
    </string-array>

    <string name="facebook_app_id" translatable="false">147630869059677</string>
    <string name="search_by">Search by : </string>
    <string name="current_date">Current Date : </string>
    <string name="search">Search</string>
    <string name="cancel">CANCEL</string>
    <string name="fill_lot">Ex 1001</string>
    <string name="fill_regis">Ex กข-1234</string>

    <string name="search_error">Incorrect format</string>
    <string name="no_found_data">Not found data</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="accident_car">AccidentCar</string>
    <string name="flood_car">Flood Car</string>
    <string name="distance">Distance</string>
    <string name="obligations">Obligations</string>
    <string name="category">Type or Category</string>

    <string name="notice" translatable="false" >ประกาศคณะกรรมการว่าด้วยฉลากฉบับที่ 35 (พ.ศ.2556) เรื่องให้รถยนตใช้แล้วเป็นสินค้าที่ควบคุมฉลาก</string>
    <string name="no_auction">Today don\'t have auction</string>
    <string name="no_data_in_system">This barcode isn\'t have in system</string>

    <string name="auction_location">Auction Location</string>
    <string name="detail">Details</string>

</resources>
